# TerraFusionMono

./: .env.example  .replit  Makefile  README.md  agent-manifest.yaml  apply-websocket-fix.sh  check-dependencies.sh  check-repos-status.sh  check-vite-apps.sh  check-websocket-environment.sh  complete-devops-setup.sh  convert-to-launcher.sh  devops-automation.sh  enhanced-vite-hmr-fix-plugin.js  import-bcbs-repos.sh  import-remaining-repos.sh  import-repos.sh  import-single-repo.sh  janeway-vite-plugin.js  list-applications.sh  mono-repo-navigator.html  nx.json  package-lock.json  package.json  run-db-migrations.sh  start-gateway.sh  sync-repository.sh  terra-ai-helper.js  terra-apps-guide.js  terra-dev-assistant-guide.md  terra-dev-assistant.js  terra-dev-assistant.mjs  terrafusion-tools-guide.md  test-websocket-client.js  test-websocket-server.js  tsconfig.base.json  update-gateway-config.sh  update-gateway-config.ts  visualize-monorepo.sh  vite-hmr-fix-plugin.js  (+1 more)
apps/bcbslevy/: .replit  README.md  add_api_call_log_table.py  add_audit_columns_to_import_log.py  add_css.py  add_data_quality_tables.py  add_historical_rates_table.py  add_import_type_migration.py  add_levy_audit_table.py  add_levy_scenario_columns.py  add_levy_scenario_missing_fields.py  add_missing_columns.py  add_tax_district_columns.py  add_user_audit_table.py  add_year_to_import_log.py  add_year_to_levy_scenario.py  app.py  app.py.bak.20250411201313  app2.py.bak  app_mcp_army_integration.py  check_taxcode.py  cli.py  cli_tool.py  confidence_interval_update.txt  config.py  create_admin.py  direct_district_insert.py  fix_database_schema.py  fix_import_log_user_id.py  fix_importlog_enum.py  fix_tax_district_table.py  forecast_chart_update.txt  homepage.html  import_benton_county_data.py  import_levy_sample.py  import_sample_levy_data.py  initialize_db.py  insert_tax_codes.py  main.py  main2.py  (+71 more)
apps/bcbslevy/2025/: 2024 Admin Refund Levy Data.xls  2025 Constitutional 1%.xlsx  2025 MC Library Joint calculation final 1.3.xls  5.90.xlsx  County rate spread 2025.xls  OSPI Assessors Levy Data 2025.xlsx  Prosser SD #116 Joint calculation 2025.xls  State Levy for Assessor Review-121024.xlsx
apps/bcbslevy/attached_assets/: Levy Expot.txt  Levy Expot.xls  Levy Expot.xml  Pasted--PROGRESS-REPORTING-AND-MVP-COMPLETION-PLAN-As-you-implement-the-components-for-Phase-2-of-our-AI--1744399768141.txt  Pasted--Replit-AI-Agent-Instructions-24-Hour-LevyMaster-Demo-Preparation-I-need-you-to-prepare-our-Le-1744757320956.txt  Pasted-AQ-on-the-Model-Content-Protocol-MCP-and-AI-Agent-Workflow-1-What-is-the-fundamental-purpose-of--1743471099236.txt  Pasted-Below-is-a-comprehensive-review-and-analysis-of-the-BCBSLevy-codebase-This-report-outlines-the-arch-1744322990054.txt  Pasted-Below-is-a-comprehensive-review-of-the-LevyMaster-project-along-with-actionable-prompts-you-can-p-1743594142351.txt  (+16 more)
apps/bsbcmaster/: .replit.workflow  .replit.workflow.updated  PROGRESS.md  README.md  add_chart_js.py  add_visualization_component.py  add_visualization_js.py  app.py  app_setup.py  asgi.py  chart_update_functions.js  check_env.py  combined_services.py  combined_workflow.py  core_demo.py  core_demo_enhanced.py  database.py  dual_server.py  enhance_property_data.py  export_data.py  fastapi_service.py  fix_statistics.js  generate_test_report.py  import_all_incremental.py  import_attached_data.py  import_batched_improvements.py  import_ftp_data.py  import_images_only.py  import_improvements.py  import_in_batches.sh  import_in_segments.py  import_incremental.py  import_minimal.py  import_multi_batches.py  import_optimized.py  import_resilient.py  import_sample_improvements.py  import_single_batch.py  js_fix.js  main.py  (+87 more)
apps/terraflow/: .env.template  BentonCounty_DynLoader.deps.json  BentonCounty_DynLoader.dll.config  BentonCounty_DynLoader.runtimeconfig.dev.json  DATA_STABILITY_FRAMEWORK_README.md  Permission.sql  Permission_1.sql  Permission_2.sql  Permission_3.sql  Permission_4.sql  README.md  RPT.sql  Untitled-1.txt  auth_routes.py  ciaps_dev.sql  ciaps_dev_1.sql  ciaps_prod.sql  config.sql  create_data_anomaly_table.py  create_data_quality_tables.py  create_deployment_package.sh  create_parcels_table.py  create_test_assessments.py  data_stability_framework.py  db_owner for ciaps_prod.sql  debug_etl.py  easy_connect.py  feature_manager.py  files.sql  filetables.sql  generate_shared_schema.py  import.sql  main.py  map_config_parser.py  map_routes.py  pDefineFileTable.sql  pGetFileID.sql  pLoadFiletoStorage.sql  pPutColumnPrint.sql  permit.sql  (+11 more)
(+8891 files in other folders)
