[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "MCP Assessor Agent API"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.2",
    "pyodbc>=5.2.0",
    "python-multipart>=0.0.20",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "requests>=2.32.3",
    "flask-cors>=5.0.1",
    "openai>=1.70.0",
    "trafilatura>=2.0.0",
    "python-dotenv>=1.1.0",
    "faker>=37.1.0",
    "sqlalchemy>=2.0.40",
    "pandas>=2.2.3",
    "xlsxwriter>=3.2.2",
    "streamlit>=1.44.1",
    "pyyaml>=6.0.2",
    "python-jose>=3.4.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
]
