[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoassessmentpro"
version = "0.1.0"
description = "A Geographic Information System (GIS) data management platform"
authors = [
  { name="Benton County Assessor's Office", email="tech@bentonassessor.gov" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask>=2.0.0",
    "flask-sqlalchemy>=3.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "openai>=1.1.0",
    "gunicorn>=20.1.0",
    "geojson>=2.5.0",
    "geopandas>=0.10.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.6.0",
    "python-dotenv>=0.19.0",
    "requests>=2.27.0",
    "flask-migrate>=3.1.0",
    "cryptography>=36.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "alembic>=1.7.0",
    "faiss-cpu>=1.7.0",
    "shapely>=1.8.0",
    "werkzeug>=2.0.0",
    "flask-login>=0.6.0",
    "psutil>=5.9.0",
    "python-json-logger>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/bentoncounty/geoassessmentpro"
"Bug Tracker" = "https://github.com/bentoncounty/geoassessmentpro/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", "migrations"]
ignore = ["E203", "W503"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "api",
    "mcp",
    "logs",
    "security", 
    "sync_service",
    "vector_db",
    "ai_agents"
]